--- a/index.html
+++ b/index.html
@@ -1825,6 +1825,7 @@
 
       <footer class="page-footer">
         <p>Text is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons Attribution 3.0 Unported License</a>. All image licensing information can be found on the <a rel="license" href="./attribution.html">attribution</a> page.</p>
+        <p><a href="https://github.com/molly/wikimedia-timeline">Source code</a> | <a href="https://github.com/molly/static-timeline-generator">Create your own timeline like this</a></p>
       </footer>
     </section>
 
