--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <title>Wikimedia timeline of events, 2014–2016</title>
-    <meta name="description" content="The Wikimedia Foundation has recently suffered from lack of communication with the editing community, poor transparency, and sudden loss of staff members.">
+    <meta name="description" content="From 2014 to 2016, the Wikimedia Foundation suffered from lack of communication with the editing community, poor transparency, and sudden loss of staff members.">
     <meta name="author" content="Molly White">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab|Hind+Vadodara:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <meta property="og:title" content="A timeline of recent events surrounding the Wikimedia projects" />
+    <meta property="og:title" content="Wikimedia timeline of events, 2014–2016" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://mollywhite.net/wikimedia-timeline/" />
     <meta property="og:image" content="http://mollywhite.net/wikimedia-timeline/images/rocket-slide.jpg" />
