backport some improvements from molly/static-timeline-generator

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Wikimedia timeline of events, 2014–2016</title>
     <meta name="description" content="From 2014 to 2016, the Wikimedia Foundation suffered from lack of communication with the editing community, poor transparency, and sudden loss of staff members.">
     <meta name="author" content="Molly White">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab|Hind+Vadodara:400,600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
